changed template text

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -5,6 +5,6 @@
   <title>Flask is Running ✅✅✅</title>
 </head>
 <body>
-  <h1>Hello! Your NZHerald Scrape Flask server is running 😊😊😊</h1>
+  <h1>Flask server for nzherald.vercel.app is running ✅✅✅</h1>
 </body>
 </html>
