--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -86,13 +86,17 @@ button {
 
 @media (max-width: 600px) {
   .contentContainer {
-    width: 90%;
+    width: 80%;
     padding: 0 1rem;
     font-size: 1.5rem; 
   }
+  .footerStyle {
+    font-size: 0.8rem;
+    padding: 0 12px;
+  }
   h1 {
     width: 100%;
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   input {
     width: 75%;
@@ -104,9 +108,13 @@ button {
 
 @media (min-width: 600px) and (max-width: 768px) {
   .contentContainer {
-    width: 90%;
+    width: 80%;
     padding: 0 1.5rem;
     font-size: 1.5rem;
+  }
+  .footerStyle {
+    font-size: 1rem;
+    padding: 0 12px;
   }
   h1 {
     width: 100%;
