--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -93,6 +93,7 @@ button {
   .footerStyle {
     font-size: 0.8rem;
     padding: 0 12px;
+    padding-bottom: env(safe-area-inset-bottom);
   }
   h1 {
     width: 100%;
@@ -115,6 +116,7 @@ button {
   .footerStyle {
     font-size: 1rem;
     padding: 0 12px;
+    padding-bottom: env(safe-area-inset-bottom);
   }
   h1 {
     width: 100%;
