--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -86,7 +86,7 @@ button {
 
 @media (max-width: 600px) {
   .contentContainer {
-    width: 80%;
+    width: 90%;
     padding: 0 1rem;
     font-size: 1.5rem; 
   }
@@ -94,6 +94,9 @@ button {
     font-size: 0.8rem;
     padding: 0 12px;
     padding-bottom: env(safe-area-inset-bottom);
+  }
+  .sentenceStyle {
+    font-size: 1.2rem;
   }
   h1 {
     width: 100%;
@@ -109,7 +112,7 @@ button {
 
 @media (min-width: 600px) and (max-width: 768px) {
   .contentContainer {
-    width: 80%;
+    width: 90%;
     padding: 0 1.5rem;
     font-size: 1.5rem;
   }
@@ -117,6 +120,9 @@ button {
     font-size: 1rem;
     padding: 0 12px;
     padding-bottom: env(safe-area-inset-bottom);
+  }
+  .sentenceStyle {
+    font-size: 1.3rem;
   }
   h1 {
     width: 100%;
