--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -104,6 +104,9 @@ button {
   }
   input {
     width: 75%;
+    height: 60px;
+    padding: 0 10px;
+    font-size: 1.5rem;
   }
   label {
     font-size: 2rem;
@@ -135,6 +138,9 @@ button {
   }
   input {
     width: 75%;
+    height: 60px;
+    padding: 0 10px;
+    font-size: 1.5rem;
   }
   label {
     font-size: 2.5rem;
