--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,9 @@
 /* Make the entire app take up the full height */
-body, html{
+body,
+html {
   margin: 0;
-  background-color: #202124; /* dark grey */
+  background-color: #202124;
+  /* dark grey */
   color: #ffffff;
   overflow-x: hidden;
   flex-direction: column;
@@ -15,7 +17,8 @@ body, html{
   text-align: center;
   width: 100%;
   min-height: 100vh;
-  flex: 1 1 auto; /* This pushes the footer down */
+  flex: 1 1 auto;
+  /* This pushes the footer down */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +33,8 @@ body, html{
   text-align: left;
   line-height: 1.5rem;
   padding: 0 12px 6px;
-  flex: 1 1 auto; /* This pushes the footer down */
+  flex: 1 1 auto;
+  /* This pushes the footer down */
   border: 1px solid white;
   border-radius: 16px;
 }
@@ -59,8 +63,10 @@ input {
 }
 
 input::placeholder {
-  font-size: 18px; /* Adjust the size as needed */
-  color: #999;     /* Optionally, you can change the placeholder color */
+  font-size: 18px;
+  /* Adjust the size as needed */
+  color: #999;
+  /* Optionally, you can change the placeholder color */
   padding: 0;
 }
 
@@ -76,41 +82,48 @@ button {
   font-family: Inter-variable, Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 400;
+  line-height: normal;
 }
 
 .footerStyle {
   font-size: 12px;
-  padding:20px; 
-  text-align:center;
+  padding: 20px;
+  text-align: center;
 }
 
 @media (max-width: 600px) {
   .contentContainer {
     width: 90%;
     padding: 0 1rem;
-    font-size: 1.5rem; 
+    font-size: 1.5rem;
   }
+
   .footerStyle {
     font-size: 1rem;
     padding: 0 12px;
     padding-bottom: env(safe-area-inset-bottom);
   }
+
   .sentenceStyle {
     font-size: 1.5rem;
   }
+
   h1 {
     width: 100%;
     font-size: 3rem;
   }
+
   input {
     width: 75%;
     height: 60px;
     padding: 0 10px;
     font-size: 1.5rem;
   }
+
   label {
     font-size: 2rem;
   }
+
   button {
     width: 120px;
     height: 60px;
@@ -124,27 +137,33 @@ button {
     padding: 0 1.5rem;
     font-size: 1.5rem;
   }
+
   .footerStyle {
     font-size: 1.2rem;
     padding: 0 12px;
     padding-bottom: env(safe-area-inset-bottom);
   }
+
   .sentenceStyle {
     font-size: 1.625rem;
   }
+
   h1 {
     width: 100%;
     font-size: 3rem;
   }
+
   input {
     width: 75%;
     height: 60px;
     padding: 0 10px;
     font-size: 1.5rem;
   }
+
   label {
     font-size: 2.5rem;
   }
+
   button {
     width: 140px;
     height: 70px;
