--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,7 +31,7 @@ html {
 .contentContainer {
   width: 48%;
   text-align: left;
-  line-height: 1.5rem;
+  line-height: normal;
   padding: 0 12px 6px;
   flex: 1 1 auto;
   /* This pushes the footer down */
@@ -105,7 +105,7 @@ button {
   }
 
   .sentenceStyle {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   h1 {
@@ -145,7 +145,7 @@ button {
   }
 
   .sentenceStyle {
-    font-size: 1.625rem;
+    font-size: 2.2rem;
   }
 
   h1 {
